修复全局梳理发现的问题（泄漏、每 Tick 全表扫描、退款账本、镜像放置判据）
一次只读全局审计后的修复。工作区原有的 RC 1.0.0 在制改动一并作为检查点提交。

本轮实际修改：

- FriendlyDragonService 三张静态表此前没有任何生命周期钩子，且
  LOADED_FRIENDLY_DRAGONS 持有 EnderDragon 引用 —— 实体持有 Level，Level 持有
  MinecraftServer，于是打完成功结局退回主菜单会把整台集成服务器留在静态字段上。
  补 SERVER_STOPPED 清理，并在 bootstrap 里注册（只注册清理，不起 Tick 循环）。

- FriendlyDragonService.recover 的最后一级兜底是 level.getAllEntities() 全维度遍历，
  而 EndBossEncounterService 只要持久状态里有龙就每 Tick 调它，且不看 stage ——
  成功结局把龙永久留在天上，所以玩家一离开末地、龙的区块一卸载，之后每个 Tick 都在
  遍历整个末地，永远。改为 200 Tick 一次；spawn 的碰撞判定走不限流的那一支，
  否则"这一刻查不到"会变成再造一条龙。

- EndBossArenaService.KNOWN_ANCHORS 是自引用 WeakHashMap：值是
  StabilityAnchorEntity，实体持有自己的 Level，即弱键被自己的值强引用，永远不回收。
  补 SERVER_STOPPED 清理（RUNTIMES 一并清）。

- PursuitRecoveryLedger 只记 item id + count，改过名的方块退回来是普通方块，
  两笔同种不同名的放置还会被并成先写的那一笔；解析不出的 id 直接 continue，
  账目静默清零。现在连数据组件一起记（可选字段，旧条目照常读，无 schema 台阶），
  按 id + 组件分别记账，无法重建的一笔记 warn 并在终端告知玩家，其余各笔照常归还。

- PursuitBlockPolicy.safeSnapshotBlock 用注册名子串判定，误伤任何 path 含 "rail"
  的方块，同时漏掉 target / lightning_rod / note_block / copper_bulb —— 以及
  respawn_anchor：它没有方块实体、空手可用、被原样复制进下界镜像，玩家可以把重生点
  设在一个会随会话消失的私人维度里。改为按方块基类判定（模组子类同样覆盖），
  兜底 isSignalSource()；坩埚、堆肥桶这类有比较器输出但不是红石硬件的家具保留。

- UnrenderedSessionService.recoverOnJoin 的注释声称会重新标记会话为 active，代码里
  并没有；能跑通只因为 deferOnLeave 故意保留了该标志。一旦标志为假而玩家人在层里，
  returnToSource 会静默拒绝，而 tick 循环又要求 RUNTIME 在册才判出口，玩家会被留在
  一个不再为他监视出口和超时的维度里。改为无条件强制返回；返回地址被清空时回落到
  世界重生点，而不是打包值 0 对应的世界原点。

- TerminalRuntimeService 的三张 REMEMBERED_* 表只在 SERVER_STOPPED 清，公共服上按
  人无界增长（同一个类的 DISCONNECT 里却明确清理了 TerminalNoticeService）。改为
  访问序有界 LRU，上限 256，保留重登后仍能回到原页签的便利。

- 删除孤儿类 client_render/WorldInterfaceAnimations（37 段剪辑早已搬到 common 的
  WorldInterfaceClips，判定框与绘制都走 WorldInterfaceRig，全仓库无任何引用）。

- 新增 PursuitRuntimeGameTests（4 项）：追逐此前有 10 个纯策略单测和 1 个只检查维度
  文件是否打包的 GameTest，退款账本与镜像放置规则一条也没覆盖。镜像维度在 gametest
  服里不存在，所以进出事务仍属人工验收。

- 文档同步：架构文档的终端主快照版本停在 v15，代码是 v16（追加
  discoveredFragmentMask），中英文一起补；追逐文档补上放置判据与退款语义；
  测试文档同步 GameTest 91 项与语言键 902。

验证：compileJava / com